Implementing __func__ in error messages
Work is continuing on documenting the library. In the process, I recognized
that Gnulib provides the `func' module that will enable us to use the
`__func__' pre-defined identifier. It is standardized in C99, but as Gnulib
discusses, it is not fully implemented on all systems, so it wasn't used in
Gnuastro. But after importing Gnulib's implementation of it, we can safely
use it even if the host system doesn't recognize it.

This new format of including the function name in the error messages has
now been implemented in nearly all library functions (except those that are
just about file opening or closing for example and can confuse the user
program users) and all internal function errors in programs: not errors
that directly relate to the user's inputs. For error messages that are
about the user's input, adding function names will most probably confuse
the user and reduce the affectiveness of the error message.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -550,6 +550,7 @@ Data container (@file{data.h})
 * Generic data container::
 * Dataset size and allocation::
 * Arrays of datasets::
+* Copying datasets::
 
 Linked lists (@file{linkedlist.h})
 
@@ -17043,6 +17044,7 @@ generic dataset, Gnuastro defines the @code{gal_data_t} as input or output.
 * Generic data container::
 * Dataset size and allocation::
 * Arrays of datasets::
+* Copying datasets::
 @end menu
 
 @node Generic data container, Dataset size and allocation, Library data container, Library data container
@@ -17467,7 +17469,7 @@ Free all the non-@code{NULL} pointers in @code{gal_data_t}, then free the
 actual data structure.
 @end deftypefun
 
-@node Arrays of datasets,  , Dataset size and allocation, Library data container
+@node Arrays of datasets, Copying datasets, Dataset size and allocation, Library data container
 @subsubsection Arrays of datasets
 
 Gnuastro's generic data container (@code{gal_data_t}) is a very versatile
@@ -17507,6 +17509,19 @@ Free all the @code{num} elements within @code{dataarr} and the actual
 allocated array. If @code{free_array} is not zero, then the @code{array}
 element of all the datasets will also be freed, see @ref{Generic data
 container}.
+@end deftypefun
+
+@node Copying datasets,  , Arrays of datasets, Library data container
+@subsubsection Copying datasets
+
+The functions in this section describes Gnuastro's facilities to copy a
+given datset into another. The new dataset can have a different type
+(including a string), it can be already allocated (in which case only the
+values will be written into it). In all these cases, if the input dataset
+is a tile, only the data within the tile are copied.
+
+@deftypefun {gal_data_t *} gal_data_copy (gal_data_t @code{*in})
+Return a new dataset that is a copy of @code{in}.
 @end deftypefun
 
 @node Linked lists, Table input output, Library data container, Gnuastro library
